src/app/my-reservations/my-reservations.component.css
div {
  margin-left: 70px;
  overflow-x: scroll;
}

h2 {
  font-size: 20px;
  margin-right: 0;
}

img {
  height: 20px;
  margin-top: 30px;
}

.mat-table.cdk-table {
  width: fit-content;
  margin-bottom: 20px;
  border: solid 2px white;
  background-color: var(--primary-background-dark);
  border-collapse: collapse;
}

tr.mat-row {
  border: 2px solid white;
}

th {
  color: white;
}

td {
  color: white;
  white-space: nowrap;
}

th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
  padding-left: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
}

@media screen and (max-width: 500px) {
  div {
    margin-left: 10px;
    margin-right: 10px;
  }
}

